[package]
name = "xbe"
version = "0.1.1"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "A parser for .xbe files (Xbox executable)"
documentation = "https://docs.rs/xbe/"
repository = "https://github.com/jonas-schievink/xbe.git"
keywords = ["xbox", "xbe", "executable", "rom"]
categories = ["parser-implementations"]
readme = "README.md"
license = "0BSD"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
log = "0.4.11"
env_logger = "0.8.1"
serde = "1.0.117"
serde_derive = "1.0.117"
bincode = "1.3.1"
byteorder = "1.3.4"
structopt = "0.3.20"

[dev-dependencies]
version-sync = "0.9"


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'xbe = "[a-z0-9\\.-]+"'
replace = 'xbe = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/xbe/[a-z0-9\\.-]+"
replace = "https://docs.rs/xbe/{{version}}"
